--- a/public/css/spinner.css
+++ b/public/css/spinner.css
@@ -5,6 +5,7 @@
     transform: translate(-50%, -50%);
     z-index: 8000;
     visibility: visible;
+    justify-content: center;
   }
 
   #loader{
@@ -18,8 +19,8 @@
   }
 
   .spinner > div {
-    width: 12px;
-    height: 12px;
+    width: 10px;
+    height: 10px;
     background-color: #e0f4fc;
     border-radius: 100%;
     display: inline-block;
