--- a/public/css/ficha-paciente.css
+++ b/public/css/ficha-paciente.css
@@ -16,7 +16,7 @@
     box-sizing: content-box !important;
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .ficha-page{
@@ -42,7 +42,7 @@
     border-top-right-radius: 4px;
     border-top-left-radius: 4px;
     z-index:5000;
-    font-size: 16px;
+    font-size: 14px;
 }
 
 .ficha-buttons-container{
@@ -161,6 +161,10 @@
     margin-bottom:25px;
 }
 
+.ficha-label{
+    font-size: 14px !important;
+}
+
 
 /*  ------------ FICHA INPUTS ---------------- */
 
@@ -169,6 +173,12 @@
     min-width: auto;
     margin: 15px 4px;
 }
+
+.ficha-input-container label{
+    font-size: 14px;
+}
+
+
 
 .ficha-doble-input{
     display: flex;
