Vinculacion de los pagos
- Actualizacion de Grow estadisticas para usar la tabla pagos. ( Se combina pagado 2023, pagado 2024 y la infomacion del ultimo pago vinculado al id del paciente, para determinar si se pago en la fecha seleccionada)

-Actualizacion de Pacientes Estadisticas para usar la tabla pagos. ( Se combina pagado 2023, pagado 2024 y la infomacion del ultimo pago vinculado al id del paciente, para determinar si se pago en la fecha seleccionada)

-Actualizacion de GrowController para usar la tabla pagos. ( Se combina pagado 2023, pagado 2024 y la infomacion del ultimo pago vinculado al id de cada paciente del grow para determinar cuales pagaron y enviar esta información a su panel de grow en el turnero)

-Actualizacion de GrowController para crear un nuevo grow mediante ruta api.

-Actualizacion de Ficha del paciente para usar la tabla Pagos ( En caso de tener el paciente un pago vinculado se muestra en su ficha con la opción de ver comprobante y marcar como pagado, en caso contrario se muestran los botones de siempre 'pagado2023 y pagado2024').

-Actualizacion de Lista de pacientes para usar la tabla pagos. (Se combina el pago vinculado al paciente con pagado2023 y 2024 para determinar si pago efectivamente )

- Actualizacion de Pacientes estadisticas ,para mostrar tambien los pacientes que no sacaron ficha aun.

- Actualizacion de calendario para usar la tabla pagos.

-nuevas rutas web y api para los pagos y los grows

--- a/public/css/ficha-paciente.css
+++ b/public/css/ficha-paciente.css
@@ -193,6 +193,73 @@
     flex-direction: row;
     flex-wrap: wrap;
     align-items: flex-end;
+    border-radius: 6px;
+    align-items: center;
+}
+
+.ficha-pagado-body{
+    width: 95%;
+}
+
+
+.ficha-pagado-body p{
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    font-size: 13px;
+    margin:0;
+    margin-top:12px;
+}
+
+.ficha-pagado-body span{
+   width: 100%;
+}
+
+.ficha-pago{
+    background-color: #36445d7e;
+    border-radius: 6px;
+    padding:5px 7px;
+    padding-bottom: 0;
+    position:relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.ficha-pagado-head h4{
+    font-size: 14px;
+    margin-bottom: 0px;
+    display: flex;
+    align-items: center;
+}
+
+.ficha-pagado-head a:hover{
+    text-decoration: none;
+}
+
+.ficha-pagado-head a img{
+    margin-left: 3px;
+    opacity: 50%;
+    filter:invert();
+}
+
+.ficha-pagado-head a img:hover{
+    opacity: 80%;
+}
+
+.ficha-pagado-head span{
+    font-size: 13px;
+    margin-bottom: 0px;
+    font-weight: 500;
+    box-sizing: border-box;
+}
+
+.ficha-pagado-head{
+    width:100%;
+    display:flex;
+    flex-direction:row;
+    justify-content:space-between;
+    margin-bottom: 2px;
 }
 
 .ficha-inputs-row{
